<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>team27</groupId>
  <artifactId>wellview-sw</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>wellview</name>
  <description>health portal</description>
  
  
  <dependencies>
    <dependency>
	    <groupId>com.google.firebase</groupId>
	    <artifactId>firebase-admin</artifactId>
	    <version>9.2.0</version>
	</dependency>
		
	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-api</artifactId>
	    <version>2.0.0-alpha0</version>
	</dependency>

	<dependency>
	    <groupId>org.slf4j</groupId>
	    <artifactId>slf4j-simple</artifactId>
	    <version>2.0.0-alpha0</version>
	    <scope>runtime</scope>
	</dependency>

	<dependency>
	    <groupId>org.openjfx</groupId>
	    <artifactId>javafx-controls</artifactId>
	    <version>11</version>
	</dependency>
	
</dependencies>

<build>
 <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.8.1</version>
            <configuration>
                <release>21</release> <!-- Or the version you are using -->
                <compilerArgs>
                    <arg>--add-modules</arg>
                    <arg>javafx.controls,javafx.fxml</arg>
                </compilerArgs>
            </configuration>
        </plugin>
        
		<plugin>
	        <groupId>org.openjfx</groupId>
	        <artifactId>javafx-maven-plugin</artifactId>
	        <version>0.0.1</version>
	        <configuration>
	            <mainClass>WellViewMain</mainClass>
	        </configuration>
    	</plugin>
    </plugins>
</build>

</project>